--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
